--- a/client.html
+++ b/client.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebWord</title>
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/MiguelrSant/IMGO/main/WebWord/Img-Logo.png " type="image/x-icon">
+    <link rel="stylesheet" href="/1sf-release/respons.css">
+    <link rel="stylesheet" href="/1sf-release/Cell/respons-cell.css">
     <style>
         body {
             width: 100%;
@@ -48,7 +50,7 @@
         #dicastec{
             width: 1200px;
             height: 500px;
-            margin-left: 91px;
+            margin-left: 5%;
             margin-top: 120px;
         }
         .dicastec1 {
@@ -119,6 +121,7 @@
     </header>
     <header>
         <main id="dicastec">
+            <br>
             <ul>
                 <li>
                     <div class="dicastec1">
@@ -169,6 +172,7 @@
                     </div>
                 </li>
             </ul>
+            <br>
         </main>
     </header>
     <script>window.location.replace('#Inicio')</script>
