--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebWord</title>
+    <link rel="shortcut icon" href="./styleheest/img/img-Logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./styleheest/style.css">
     <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap"
