--- a/index.html
+++ b/index.html
@@ -26,26 +26,26 @@
             </li>
             <li class="nav-item" style="z-index: 999;">
               <a href="" class="nav-logo">
-                <img src="./styleheest/img/img-Logo.png" class="logo" style="width: 25px; margin-left: -31px;" />
+                <img src="./styleheest/img/img-Logo.png" class="logo" style="width: 25px; margin-right: 240px;" />
               </a>
             </li>
           </ul>
   
           <ul class="nav-list-mobile">  
             <li class="nav-item-mobile">
-              <a href="#" class="nav-link-mobile">Noticias</a>
+              <a href="#Noticias" class="nav-link-mobile">Noticias</a>
             </li>
             <li class="nav-item-mobile">
-              <a href="#" class="nav-link-mobile">Novidades</a>
+              <a href="#Novidades" class="nav-link-mobile">Novidades</a>
             </li>
             <li class="nav-item-mobile">
-              <a href="#" class="nav-link-mobile">Tecnologia</a>
+              <a href="#Tecnologia" class="nav-link-mobile">Tecnologia</a>
             </li>
             <li class="nav-item-mobile">
-              <a href="#" class="nav-link-mobile">Dicas</a>
+              <a href="#Dicas" class="nav-link-mobile">Dicas</a>
             </li>
             <li class="nav-item-mobile">
-              <a href="#" class="nav-link-mobile">Sobre Nós</a>
+              <a href="#SobreNós" class="nav-link-mobile">Sobre Nós</a>
             </li>
           </ul>
           <!-- NAV LIST DESKTOP-->
@@ -56,19 +56,19 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Noticias</a>
+              <a href="#Noticias" class="nav-link">Noticias</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Novidades</a>
+              <a href="#Novidades" class="nav-link">Novidades</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Tecnologia</a>
+              <a href="#Tecnologia" class="nav-link">Tecnologia</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Dicas</a>
+              <a href="#Dicas" class="nav-link">Dicas</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Sobre Nós</a>
+              <a href="#SobreNós" class="nav-link">Sobre Nós</a>
             </li>
           </ul>
         </div>
